...
                    Text(
                      _formType == FormType.register
                          ? 'Уже есть аккаунт?'
                          : 'Еще нет аккаунта? ',
                    ),
                    TextButton(
                      key: const ValueKey('switchButton'),
                      onPressed: _switchForm,
                      child: RichText(
                        text: TextSpan(children: [
                          TextSpan(
                            text: _formType == FormType.register
                                ? 'Войти'
...
